--- a/desafios/d010/estilo/style.css
+++ b/desafios/d010/estilo/style.css
@@ -1,4 +1,65 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Beba+Neue&display=swap');
+
+@font-face {
+    font-family:'Android';
+    src: url('../fontes/idroid.otf')format('opentype');
+    font-weight: normal;
+}  
+
+
+:root {
+    --cor0: #f5eaa9;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #83f6b4;
+    --cor5: #063d1e;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque:'Bebas Neue', cursive;
+    --fonte-android: 'Android',cursive;
+}
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
-    background-color:#c5ebd6 ;
+    background-color: var(--cor0);
+    font-family:var(--fonte-padrao);
+}
+
+header > h1 {
+    color: white;
+    font-family: var(--fonte-destaque);
+}
+header {
+    background-color: var(--cor3);
+}
+header >p {
+    color: white;
+}
+
+nav {
+    background-color: var(--cor5);
+}
+
+main {
+    background-color: white;
+}
+
+main h1 {
+    color:#1a5c37 ;
+    font-family: var(--fonte-android);
+}
+
+main h2 {
+    font-family: var(--fonte-android);
+}
+
+footer {
+    background-color: var(--cor5);
+    color: white;
 }
